--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,6 +27,7 @@ main{
 }
 
 section#login{
+    display: block;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -38,14 +39,23 @@ section#login{
     margin: auto;
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.821);
+    overflow: hidden;
+    transition: width .5s, height .5s;
+    transition-timing-function: ease;
+
     
 }
 
-div#imagem{
+section#login > div#imagem{
+    display: block;
     background-image: url(../imagens/francesco.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     height: 200px;
-    border-radius: 10px 10px 0px 0px;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
 }
