--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@ Lilás: #5f2c82
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-html, body{
+body,html {
     width: 100vw;
     height: 100vh;
     background-color: #5f2c82;
@@ -32,6 +32,8 @@ section#login{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
+
 
     width: 300px;
     height: 500px;
@@ -39,7 +41,6 @@ section#login{
     margin: auto;
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.821);
-    overflow: hidden;
     transition: width .5s, height .5s;
     transition-timing-function: ease;
 
