--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,26 +7,27 @@ Verde: #49a09d
 Lilás: #5f2c82
 */
 
-*{
+* {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body,html {
+body,
+html {
     width: 100vw;
     height: 100vh;
     background-color: #5f2c82;
 }
 
-main{
+main {
     width: 100vw;
     height: 100vh;
     position: relative;
 }
 
-section#login{
+section#login {
     display: block;
     position: absolute;
     top: 50%;
@@ -40,14 +41,14 @@ section#login{
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.821);
-    
+
     transition: width .5s, height .5s;
     transition-timing-function: ease;
 
-    
+
 }
 
-section#login > div#imagem{
+section#login>div#imagem {
     display: block;
     background-image: url(../imagens/francesco.jpg);
     background-repeat: no-repeat;
@@ -56,7 +57,7 @@ section#login > div#imagem{
     height: 200px;
 }
 
-section#login > div#formulario{
+section#login>div#formulario {
     display: block;
     padding: 10px;
 }
