--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -10,6 +10,7 @@ Grandes Telas: acima de 1200px */
 
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
+    /* CONFIGURAÇÕES PARA TABLET */
 
     html,
     body {
@@ -18,12 +19,13 @@ Grandes Telas: acima de 1200px */
 
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login>div#imagem {
         float: left;
         width: 40%;
-        height: 100vh;
+        height: 300px;
     }
 
     section#login>div#formulario {
@@ -32,9 +34,36 @@ Grandes Telas: acima de 1200px */
         height: 100vh;
     }
 
+    /*
+    Alinhamento Input's (Login/Senha)
+        form > div.campos{
+        display: block;
+        position: relative;
+        left: 15%;
+    } */
+
+    form > div > input[type=email]{
+        width: 90%;
+    }
+
+    form > div > input[type=password]{
+        width: 90%;
+    }
+
+    form > input[type=submit]{
+        margin: 5px auto;
+        width: 60%;
+    }
+
+    form > a {
+        margin: 5px auto;
+        width: 60%;
+    }
+
 }
 
 @media screen and (min-width: 992px) {
+/* CONFIGURAÇÕES PARA GRANDES TELAS */
 
     html,
     body {
@@ -44,12 +73,13 @@ Grandes Telas: acima de 1200px */
 
     section#login {
         width: 60vw;
+        height: 350px;
     }
 
     section#login>div#imagem {
         float: right;
         width: 40%;
-        height: 50vw;
+        height: 350px;
     }
 
     section#login>div#formulario {
@@ -58,4 +88,32 @@ Grandes Telas: acima de 1200px */
         height: 100vh;
     }
 
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+    
+    div#formulario > p {
+        font-size: 1.2em;
+        margin: 20px 0px;
+    }
+
+    form > div > input[type=email]{
+        width: 90%;
+    }
+
+    form > div > input[type=password]{
+        width: 90%;
+    }
+
+    form > input[type=submit]{
+        margin: 5px auto;
+        width: 60%;
+    }
+
+    form > a {
+        margin: 5px auto;
+        width: 60%;
+    }
 }
+
