--- a/estilos/style.css
+++ b/estilos/style.css
@@ -61,3 +61,62 @@ section#login>div#formulario {
     display: block;
     padding: 10px;
 }
+
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+form label{
+    display: none;
+}
+
+.campos{
+    display: block;
+}
+
+form > div > input[type=email]{
+    width: 86%;
+}
+
+form > div > input[type=password]{
+    width: 86%;
+}
+
+form > input[type=submit] {
+    display: block;
+    background-color: #49a09d;
+    color: white;
+    font-weight: bolder;
+    font-size: 1em;
+    width: 100%;
+    height: 25px;
+    border: none;
+    padding: 2px;
+    margin: 5px 0px;
+    border-radius: 5px;
+}
+
+form > input[type=submit]:hover{
+    background-color: #428b89;
+    cursor: pointer;
+}
+
+form > a {
+    display: block;
+     background-color: white;
+     color: #49a09d;
+     border: 1px solid #49a09d;
+     border-radius: 5px;
+     width: 100%;
+     height: 25px;
+     text-decoration: none;
+     text-align: center;
+}
+
+form > a:hover{
+    background-color: #65dcd8;
+    color: white;
+    cursor: pointer;
+}
